# techstore

./: .env.backup.20250905_203627  .env.development  .env.example  .env.template  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Dockerfile  Dockerfile.bak  Procfile  README.md  TODO.md  alembic.ini  debug_env_flow.py  pyproject.toml  railway.toml  switch-env  tailwind.config.js  test-db  test_failure_analysis.md  test_sale_debug.py  test_structure_analysis.md
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-dev.sh
.pre-commit/: db.db
alembic/: env.py
docs/: README.md  architecture-examples.md  authentication_system.md  development-roadmap.md  feature-implementation-guide.md  general.md  guia.txt  multitenancy-guide.md  mvp-definition.md  pending_features.md  plan-refactor-payment-system.md  production-readiness-analysis.md  project-setup-guide.md  project-vision.md  saas-plan.md  statistics-plan.md  tech-architecture.md  tenant_management.md  test-coverage-plan-sales-system.md  testing_structure.md  user-stories.md  user_management_implementation.md  versionado.md
scripts/: add_dummy_data.py  add_products_categories.py  add_products_only.py  analyze_production_db.py  build.sh  clean_db_keep_essentials.py  create_admin_railway.sh  create_repair_service_product.py  delete_cash_closings.py  diagnose_balances.py  find_missing_transactions.py  fix_all_sequences.py  fix_sequences.sql  init_customer_accounts.py  init_db.sh  migrate_missing_payments.py  pre_deploy_check.sh  (+8 more)
techstore/: pyproject.toml
techstore/backend/: manage.py  pytest.ini
techstore/backend/static/: polyfills.6bf4b5f23e4281ac.js
techstore/backend/staticfiles/: main.29f9264fdd6827f0.js  runtime.a9ed4cd750b373b0.js
techstore/backend/staticfiles/admin/css/: base.css
techstore/backend/staticfiles/admin/js/: SelectFilter2.js  inlines.js
techstore/backend/staticfiles/admin/js/admin/: RelatedObjectLookups.js
techstore/backend/techstore_api/: __init__.py  asgi.py  settings.py  urls.py  urls_public.py  urls_tenant.py  wsgi.py
techstore/backend/templates/: index.html  styles.de8d4b108e1d4dfb.css
techstore/backend/tenants/: __init__.py  admin.py  apps.py  middleware.py  models.py
techstore/backend/tenants/management/: __init__.py
techstore/backend/tenants/management/commands/: __init__.py  create_test_tenant.py  init_public_tenant.py
techstore/backend/tenants/migrations/: 0001_initial.py  0002_store_alter_domain_options_alter_domain_is_primary_and_more.py  __init__.py
techstore/backend/tests/: __init__.py  conftest.py
techstore/backend/tests/techstore_api/: __init__.py
techstore/backend/tests/tenants/: __init__.py  test_models.py
techstore/backend/tests/users/: test_auth.py  test_models.py
techstore/backend/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
techstore/backend/users/management/commands/: setup_roles.py  setup_tenant_roles.py
techstore/backend/users/migrations/: 0001_initial.py  0002_add_phone_and_audit_log.py  __init__.py
techstore/frontend/: package-lock.json  package.json
techstore/frontend/src/: index.html
techstore/frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
techstore/frontend/src/app/components/status-checker/: status-checker.component.html  status-checker.component.scss  status-checker.component.spec.ts  status-checker.component.ts
techstore/frontend/src/app/services/: api.service.ts
(+462 files in other folders)
